[package]
name = "vector_memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vector_memory"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
rayon = "1.7.0"
bincode = "1.3.3"
serde = "1.0.160"
